--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "google-map-react": "^2.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-autocomplete": "^2.7.3",
+    "react-movable": "^3.2.0",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
